syntax = "proto3";
package meta;

import "types.proto";


message PB_Meta {
    map<string, PB_M> Value                          = 1;
}


message PB_M {
    types.PB_Bytes    rcTypeId                    = 1;
    types.PB_Uint32   quota                       = 2;
    types.PB_Queue    canBorrow                   = 3;
    types.PB_Queue    recycled                    = 4;
    types.PB_Map      used                        = 5;
}


message PB_BorrowRecord {
    types.PB_Bytes  clientID                      = 1;
    types.PB_String rcID                          = 2;
    types.PB_Int64  borrowAt                      = 3;
    types.PB_Int64  expireAt                      = 4;
}
